In binutils 2.16 new SuperH flags were introduced.  Since we still use old gdb, teach it new flags, so that it can recognize binaries compiled with new binutils.  For new flags set arch to an approximate superset that this version of bfd knows about.  This is good enough for gdb.

PR port-sh3/32972